[package]
name = "meshcore"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = { version = "0.8.4", default-features = false }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "heapless", "rand_core"] }
cipher = { version = "0.4.4", default-features = false }
defmt = { version = "1.0.1", optional = true }
dryoc = { version = "0.7.0", default-features = false, features = ["u64_backend"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["fast"] }
heapless = "0.8.0"
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false }
zerocopy = { version = "0.8.26", features = ["derive"] }

[features]
defmt = ["dep:defmt"]
