[package]
name = "meshcore"
version = "0.1.0"
edition = "2024"

[dependencies]
zerocopy = { version = "0.8.26", features = ["derive"] }
defmt = { version = "1.0.1", optional = true }
heapless = "0.8.0"

sha2 = { version = "0.10.9", default-features = false }
hmac = { version = "0.12.1", default-features = false }

cipher = { version = "0.4.4", default-features = false }
aes = { version = "0.8.4", default-features = false }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "heapless", "rand_core"] }

ed25519-dalek = { version = "2.2.0", default-features = false, features = ["fast"] }
x25519-dalek = { version = "2.0.1", default-features = false }

[features]
defmt = ["dep:defmt"]
