[package]
name = "meshcore_companion"
description = "meshcore companion serial protocol"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
defmt = { version = "1.0.1", optional = true }
zerocopy = { version = "0.8.26", default-features = false, features = ["derive"] }

[features]
defmt = ["dep:defmt"]
